<resources>
    <string name="app_name">Sonic Deliveries</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_message">Sign Up with Sonic Deliveries</string>
    <string name="empty_email_field_error">Email field must not be empty</string>
    <string name="invalid_email_error_message">Enter a valid email address</string>
    <string name="empty_password_field_error_message">Password field must not be empty</string>
    <string name="invalid_password_error_message">Password length must be 6 or more</string>
    <string name="empty_name_error_message">Name must not be empty</string>
    <string name="empty_phone_error_message">Phone number must not be empty</string>
    <string name="invalid_phone_error_message">Enter a valid phone number</string>
    <string name="password_dont_match_error_message">Passwords don\'t match</string>
    <string name="cancelled">Cancelled</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="placed">Placed</string>
    <string name="in_transit">In Transit</string>
    <string name="title_activity_maps">Map</string>
    <string name="delivering_package_from">Delivering package from %s</string>
    <string name="delivered_on">Delivered on %s</string>
    <string name="delivered">Delivered</string>
    <string name="item_name">ITEM NAME</string>
    <string name="delivered_summary_message">was succesfully delivered on</string>
    <string name="cancelled_summary_message">\'s delivery was cancelled on</string>
    <string name="in_transit_summary_message">The estimated time of arrival of your next delivery is</string>
    <string name="placed_summary_message_prefix">A delivery order for</string>
    <string name="placed_summary_message_suffix">was successfully placed on</string>
    <string name="delivery_order_placed">Delivery order placed</string>
    <string name="package_in_transit">Package in transit</string>
    <string name="delivery_complete">Delivery complete</string>
    <string name="delivery_cancelled">Delivery Cancelled</string>
    <string name="pick_up_point">Pick-Up Point</string>
    <string name="destination">Destination</string>
    <string name="additional_information">Additional Information</string>
    <string name="pick_up_date">Pick-Up Date</string>
    <string name="item_name_capitalized">Item Name</string>
    <string name="empty_item_name_error">Enter name of package to be delivered</string>
    <string name="empty_pickup_address_error">Select or enter item pick-up address</string>
    <string name="empty_destination_address_error">Select or enter destination address</string>
    <string name="empty_pick_up_date_error">Select a date for us to pickup your item</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="track_delivery">Track Delivery</string>

    <string name="new_user_salutation">Welcome,</string>

    <string name="new_login_salutation">Welcome back,</string>
    <string name="estimated_time_of_arrival">Estimated Time of Arrival</string>
    <string name="pick_up_date_title">Pick Up Date</string>
    <string name="new_delivery">New Delivery</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_delivery">Cancel Delivery</string>
    <string name="confirm_cancel_delivery">Are you sure you want to cancel your delivery?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="new_delivery_success">Your delivery has been successfully placed</string>
    <string name="no_placed_delivery_error">You have no deliveries placed. Click on the round orange button to add a new
        delivery
    </string>
    <string name="no_complete_deliveries_error">You have no deliveries completed or cancelled. Click on the round orange
        button to add a new delivery
    </string>
    <string name="no_deliveries_in_transit_message">You have no deliveries in transit. Click on the round orange button
        to add a new delivery
    </string>
    <string name="delivery_summary">Delivery Summary</string>
    <string name="pickup_date_title">PICK-UP DATE</string>
    <string name="delivery_id">DELIVERY ID</string>
    <string name="delivered_on_title">DELIVERED ON</string>
    <string name="cancelled_on">CANCELLED ON</string>
    <string name="on_boarding_page1_title">Welcome</string>
    <string name="on_boarding_page1_description">Thanks for choosing Sonic Deliveries for all your delivery purposes
    </string>
    <string name="on_boarding_page2_title">Best Delivery Service</string>
    <string name="on_boarding_page2_description">You came to the right place. We offer the best delivery service you can
        find
    </string>
    <string name="on_boarding_page3_title">Customer Service</string>
    <string name="on_boarding_page3_description">Best of all we\'ll be right next to you through every step your
        delivery order.
    </string>
    <string name="getting_started">Getting Started</string>
    <string name="getting_started_message">Create an account or login to get started with Sonic Deliveries</string>
    <string name="logout">Logout</string>
    
    <string-array name="old_user_salutations">
        <item>Hi there,</item>
        <item>What\'s up?</item>
        <item>Good day,</item>
        <item>Hello,</item>
    </string-array>

</resources>
